add comments and citations

--- a/templates/edit_class_participant.j2
+++ b/templates/edit_class_participant.j2
@@ -1,3 +1,8 @@
+<!--Citation for edit participants page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 
 <head>
@@ -5,20 +10,23 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!-- table populated with class participant's existing data -->
 <body> 
     <div> 
         <table border="1 cellpadding="4">
             <caption> <strong>Editing Class Participant: </strong> </caption>
-
+            <!-- access data passed from app.py-->
             {% if data %}
                 <thead>
+                    <!-- iterate through data for the headers -->
                     <tr>
                         {% for key in data[0].keys() %}
                         <th> {{key}} </th>
                         {% endfor %}
                     </tr>
-
+                
                 <tbody>
+                <!-- for every item, iterate through every key to populate table with data -->
                 {% for item in data %}
                     <tr>
                     {% for key in item.keys() %}
@@ -31,6 +39,8 @@
     </div>
 
     <p>&nbsp;</p>
+
+    <!-- form to edit class participant that is prepolated with old values -->
     <div id="edit">
     <form method="POST" action="/edit_class_participants/{{data[0].Class_Participant_ID}}" id="Edit_Class_Participant">
         <legend><strong>Edit Class Participant {{data[0].Class_Participant_ID}}</strong></legend>
@@ -58,6 +68,7 @@
                 {% endfor %}
                 </select>              
             </fieldset>
+            <!--buttons to submit or cancel form-->
             <input class="btn" type="submit" name="Edit_Class_Participant" value="Edit Class Participants">
             <a href='/class_participants'><input class="btn" type="button" value="cancel"></a>
     </form>
