--- a/templates/index.j2
+++ b/templates/index.j2
@@ -1,3 +1,8 @@
+<!--Citation for home page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 
 <head>
@@ -6,6 +11,7 @@
 </head>
 
 <body>
+    <!--link to change pages-->
     <h1> Jimbo's Gym </h1>
     [ <a href="/">Home</a> |
     <a href="members">Members</a> |
