--- a/templates/classes.j2
+++ b/templates/classes.j2
@@ -1,16 +1,18 @@
+<!--Citation for classes page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 <head>
     <title>Classes</title>
     <link href="/static/style.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- determines what shows up on the page-->
     <script language="JavaScript">
         function showform(dowhat) {
             if(dowhat == 'insert') {
                 document.getElementById('browse').style.display = 'none';
-				document.getElementById('insert').style.display = 'block';
-            }
-            else if (dowhat == 'all') {
-                document.getElementById('browse').style.display = 'block';
 				document.getElementById('insert').style.display = 'block';
             }
             else {
@@ -20,13 +22,16 @@
         }
         function newClass() { showform('insert'); }
         function browseClass() { showform ('browse'); }
-        function showAll() { showform ('all'); }
+        
     </script>
 </head>
 
+<!-- show classes when the page loads-->
 <body onload="browseClass()">
+
+<!--link to change pages-->
 <h1>Classes</h1>
-    [ <a href="/">Home</a> |
+[ <a href="/">Home</a> |
 <a href="members">Members</a> |
 <a href="instructors">Instructors</a> |
 <a href="gyms">Gyms</a> |
@@ -35,12 +40,16 @@
 <a href="class_participants">Class Participants</a>]
 <p></p>
 
+
 <div id="browse">
     <p><a href="#" onClick="newClass()"><strong>Add New Class</strong></a></p>
     <strong>Browse Classes</strong>
+        <!-- table for browsing all classes -->
        <table cellpadding="4">
+        <!-- access data passed from app.py-->
         {% if data %}
             <thead>
+                <!-- iterate through data for the headers -->
                 <tr>
                     {% for key in data[0].keys() %}
                     <th>{{ key }}</th>
@@ -48,11 +57,13 @@
                 </tr>    
 
             <tbody>
+            <!-- for every item, iterate through every key to populate table with data -->
             {% for item in data %}
                 <tr>
                     {% for key in item.keys() %}
                         <td> {{ item[key] }} </td>
                     {% endfor %}
+                    <!-- a link routes to editing and deleting class -->
                     <td><a href="edit_class/{{item.Class_ID}}" class="btn btn-default"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
                     <td><a href="delete_class/{{item.Class_ID}}" class="btn btn-default"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
                 </tr>
@@ -63,6 +74,7 @@
     <p>&nbsp;</p>
 </div> <!-- browse -->
 
+<!-- form for inserting new class -->
 <div id="insert">
     <form method="POST" id="addClass" actions="/classes">
         <legend><strong>Add Workout Class</strong></legend>
@@ -84,6 +96,7 @@
                         {% endfor %}
                     </select>
             </fieldset>
+        <!--buttons to submit or cancel form-->
         <input class="btn" type="submit" name="addClass" value="Add Class">
         <input class="btn" type="submit" value="cancel" onClick="browseClass()">
     </form>
