--- a/templates/edit_class.j2
+++ b/templates/edit_class.j2
@@ -1,15 +1,23 @@
+<!--Citation for edit class page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 <head>
     <title>Edit Class</title>
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!-- table populated with class's existing data -->
 <body>
     <div> 
         <table border="1 cellpadding="4">
             <caption> <strong>Editing Class: </strong> </caption>
+            <!-- access data passed from app.py-->
             {% if data %}
                 <thead>
+                    <!-- iterate through data for the headers -->
                     <tr>
                         {% for key in data[0].keys() %}
                         <th> {{key}} </th>
@@ -17,6 +25,7 @@
                     </tr>
 
                 <tbody>
+                <!-- for every item, iterate through every key to populate table with data -->
                 {% for item in data %}
                     <tr>
                     {% for key in item.keys() %}
@@ -29,6 +38,8 @@
     </div>
 
     <p>&nbsp;</p>
+
+    <!-- form to edit class that is prepolated with old values -->
     <div id="edit">
     <form method="POST" action="/edit_class/{{data[0].Class_ID}}" id="editClass">
         <legend><strong>Edit Class {{data[0].Class_ID}}</strong></legend>
@@ -55,6 +66,7 @@
                         {% endfor %}
                     </select>
             </fieldset>
+            <!--buttons to submit or cancel form-->
             <input class="btn" type="submit" name="Edit_Class" value="Edit Class">
             <a href='/classes'><input class="btn" type="button" value="cancel"></a>
     </form>
