--- a/templates/edit_gym.j2
+++ b/templates/edit_gym.j2
@@ -1,3 +1,8 @@
+<!--Citation for edi gym page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 
 <head>
@@ -5,13 +10,15 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!-- table populated with gym's existing data -->
 <body> 
     <div> 
         <table border="1 cellpadding="4">
             <caption> <strong>Editing Gym: </strong> </caption>
-
+            <!-- access data passed from app.py-->
             {% if data %}
                 <thead>
+                    <!-- iterate through data for the headers -->
                     <tr>
                         {% for key in data[0].keys() %}
                         <th> {{ key }} </th>
@@ -19,6 +26,7 @@
                     </tr>
 
                 <tbody>
+                <!-- for every item, iterate through every key to populate table with data -->
                 {% for item in data %}
                     <tr>
                     {% for key in item.keys() %}
@@ -31,6 +39,8 @@
     </div>
 
     <p>&nbsp;</p>
+
+    <!-- form to edit gym that is prepolated with old values -->
     <div id="edit">
     <form method="POST" action="/edit_gym/{{data[0].Gym_ID}}" id="editGym">
         <legend><strong>Edit Gym {{data[0].Gym_ID}}</strong></legend>
@@ -47,6 +57,7 @@
                     <input type="time" name="closing_time" id="closing_time" value="{{data[0].CLOSES}}" required>
                 <p></p>
             </fieldset>
+            <!--buttons to submit or cancel form-->
             <input class="btn" type="submit" name="Edit_Gym" value="Edit Gym">
             <a href='/gyms'><input class="btn" type="button" value="cancel"></a>
     </form>
