--- a/templates/edit_instructor.j2
+++ b/templates/edit_instructor.j2
@@ -1,16 +1,23 @@
+<!--Citation for edit instructor page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 <head>
     <title>Edit Instructor</title>
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!-- table populated with instructor's existing data -->
 <body>
     <div> 
         <table border="1 cellpadding="4">
             <caption> <strong>Editing Instructor: </strong> </caption>
-
+            <!-- access data passed from app.py-->
             {% if data %}
                 <thead>
+                    <!-- iterate through data for the headers -->
                     <tr>
                         {% for key in data[0].keys() %}
                         <th> {{key}} </th>
@@ -18,6 +25,7 @@
                     </tr>
 
                 <tbody>
+                <!-- for every item, iterate through every key to populate table with data -->
                 {% for item in data %}
                     <tr>
                     {% for key in item.keys() %}
@@ -30,6 +38,8 @@
     </div>
 
     <p>&nbsp;</p>
+
+    <!-- form to edit instructor that is prepolated with old values -->
     <div id="edit">
     <form method="POST" action="/edit_instructor/{{data[0].Instructor_ID}}" id="editInstructor">
         <legend><strong>Edit Instructor {{data[0].Instructor_ID}}</strong></legend>
@@ -65,6 +75,7 @@
                     {% endfor %}
                 </select>
             </fieldset>
+            <!--buttons to submit or cancel form-->
             <input class="btn" type="submit" name="Edit_Instructor" value="Edit Instructor">
             <a href='/instructors'><input class="btn" type="button" value="cancel"></a>
     </form>
