--- a/templates/members.j2
+++ b/templates/members.j2
@@ -1,51 +1,36 @@
+<!--Citation for members page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 
 <head>
 <title>Members</title>
 <link href="/static/style.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- determines what shows up on the page-->
     <script language="JavaScript">
         function showform(dowhat) {
             if(dowhat == 'insert') {
                 document.getElementById('browse').style.display = 'none';
 				document.getElementById('insert').style.display = 'block';
-				document.getElementById('update').style.display = 'none';
-				document.getElementById('delete').style.display = 'none';
-            }
-            else if (dowhat == 'update'){
-                document.getElementById('browse').style.display = 'none';
-				document.getElementById('insert').style.display = 'none';
-				document.getElementById('update').style.display = 'block';
-				document.getElementById('delete').style.display = 'none';
-            }
-            else if (dowhat == 'delete') {
-                document.getElementById('browse').style.display = 'none';
-				document.getElementById('insert').style.display = 'none';
-				document.getElementById('update').style.display = 'none';
-				document.getElementById('delete').style.display = 'block';
-            }
-            else if (dowhat == 'all') {
-                document.getElementById('browse').style.display = 'block';
-				document.getElementById('insert').style.display = 'block';
-				document.getElementById('update').style.display = 'block';
-				document.getElementById('delete').style.display = 'block';
             }
             else {
                 document.getElementById('browse').style.display = 'block';
 				document.getElementById('insert').style.display = 'none';
-				document.getElementById('update').style.display = 'none';
-				document.getElementById('delete').style.display = 'none';
             }
         }
-        function newMember() { showform('insert'); }
-        function updateMember(pid) { showform('update'); }
-        function deleteMember(pid) { showform ('delete'); }
+        function newMember() { showform('insert'); }  
         function browseMember() { showform ('browse'); }
-        function showAll() { showform ('all'); }
+        
     </script>
 </head>
 
+<!-- show members when the page loads-->
 <body onload="browseMember()">
+
+<!--link to change pages-->
 <h1>Members</h1>    
 [ <a href="/">Home</a> |
 <a href="members">Members</a> |
@@ -56,12 +41,16 @@
 <a href="class_participants">Class Participants</a>]
 <p></p>
 
+
 <div id="browse">
     <p><a href="#" onClick="newMember()"><strong>Add New Member</strong></a></p>
     <strong>Browse Members</strong>
+    <!-- table for browsing all members -->
     <table cellpadding="4">
+        <!-- access data passed from app.py-->
         {% if data %}
             <thead>
+            <!-- iterate through data for the headers -->
             <tr>
                 {% for key in data[0].keys() %}
                 <th>{{key}}</th>
@@ -69,12 +58,13 @@
             </tr>    
 
             <tbody>
+            <!-- for every item, iterate through every key to populate table with data -->
             {% for item in data %}
             <tr>
                 {% for key in item.keys() %}
                     <td> {{item[key]}} </td>
                 {% endfor %}
-
+                    <!-- a link routes to editing and deleting member -->
                     <td><a href="edit_member/{{item.Member_ID}}" class="btn btn-default"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
 		    		<td><a href="delete_member/{{item.Member_ID}}" class="btn btn-default"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
             </tr>
@@ -84,6 +74,7 @@
     <p>&nbsp;</p>
 </div> <!--browse-->
 
+<!-- form for inserting new member -->
 <div id="insert">
     <form method="POST" action="/members" id="addMember">
         <legend><strong>Add Member</strong></legend>
@@ -110,11 +101,13 @@
                 <label>Gym</label> 
                 <select name="gym_id" id="gym_id">
                     <option value="0">&nbsp;</option>
+                    <!-- Access our gyms tuple passed from app.py -->
                     {% for gym in gyms %}
                         <option value="{{gym['gym_id']}}"> {{gym['gym_id']}} </option>
                     {% endfor %}
                 </select>
             </fieldset>
+            <!--buttons to submit or cancel form-->
             <input class="btn" type="submit" name="addMember" value="Add Member">
             <input class="btn" type="submit" value="cancel" onClick="browseMember()">
     </form>
