--- a/templates/plans.j2
+++ b/templates/plans.j2
@@ -1,17 +1,19 @@
+<!--Citation for plans page-->
+<!--Date: 3/15/2023-->
+<!--All code is based on the CS 3409  flask starter app-->
+<!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
+
 <html>
 
 <head>
 <title>Membership Plans</title>
 <link href="/static/style.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- determines what shows up on the page-->
     <script language="JavaScript">
         function showform(dowhat) {
             if(dowhat == 'insert') {
                 document.getElementById('browse').style.display = 'none';
-				document.getElementById('insert').style.display = 'block';
-            }
-            else if (dowhat == 'all') {
-                document.getElementById('browse').style.display = 'block';
 				document.getElementById('insert').style.display = 'block';
             }
             else {
@@ -21,11 +23,13 @@
         }
         function newPlan() { showform('insert'); }
         function browsePlan() { showform ('browse'); }
-        function showAll() { showform ('all'); }
     </script>
 </head>
 
+<!-- show plans when the page loads-->
 <body onload="browsePlan()">
+
+<!--link to change pages-->
 <h1>Membership Plans</h1>    
 [ <a href="/">Home</a> |
 <a href="members">Members</a> |
@@ -36,13 +40,17 @@
 <a href="class_participants">Class Participants</a>]
 <p></p>
 
+
 <div id="browse">
     <p><a href="#" onClick="newPlan()"><strong>Add New Membership Plan</strong></a> </p>
     <strong>Browse Membership Plans</strong>
+    <!-- table for browsing all plans -->
     <table cellpadding="4">
     <caption> 1 = Included;  0 = Not Included</caption>
+        <!-- access data passed from app.py-->
         {% if data %}
             <thead>
+                <!-- iterate through data for the headers -->
                 <tr>
                     {% for key in data[0].keys() %}
                     <th>{{ key }}</th>
@@ -50,11 +58,13 @@
                 </tr>    
 
             <tbody>
+            <!-- for every item, iterate through every key to populate table with data -->
             {% for item in data %}
                 <tr>
                     {% for key in item.keys() %}
                         <td> {{ item[key] }} </td>
                     {% endfor %}
+                    <!-- a link routes to editing and deleting plans -->
                     <td><a href="edit_plan/{{item.Membership_Plan_ID}}" class="btn btn-default"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
                     <td><a href="delete_plan/{{item.Membership_Plan_ID}}" class="btn btn-default"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
                 </tr>
@@ -65,6 +75,7 @@
     <p>&nbsp;</p>
 </div> <!--browse-->
 
+<!-- form for inserting new plan -->
 <div id="insert">
     <form method="POST" action="/plans" id="addPlan">
         <legend><strong>Add Membership Plan</strong></legend>
@@ -96,6 +107,7 @@
                         <option value=1> Yes </option>
                     </select>
             </fieldset>
+            <!--buttons to submit or cancel form-->
             <input class="btn" type="submit" name="addPlan" value="Add Plan">
             <input class="btn" type="submit" value="cancel" onClick="browsePlan()">
     </form>
