--- a/templates/classes.j2
+++ b/templates/classes.j2
@@ -1,6 +1,6 @@
 <!--Citation for classes page-->
 <!--Date: 3/15/2023-->
-<!--All code is based on the CS 3409  flask starter app-->
+<!--This page is adapted from the CS 340 flask starter app-->
 <!--Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app--> 
 
 <html>
