Fix Index: Class & Class Participants info

--- a/templates/index.j2
+++ b/templates/index.j2
@@ -26,7 +26,8 @@
         <li>Instructors - Personal/Contact information for class instructors</li>
         <li>Gyms - Gym address information</li>
         <li>Membership Plans - Amenity information for each membership level</li>
-        <li>Workout Classes - List of classes currently offered by all gyms</li>
+        <li>Classes - List of classes currently offered by all gyms</li>
+        <li>Class Participants - List of Member/Class connections at all gyms</li>
     </ul> 
 
 </body>
