fix input type and add plus icons

--- a/templates/class_participants.j2
+++ b/templates/class_participants.j2
@@ -42,7 +42,7 @@
 
 <!--browse all particpants-->
 <div id="browse">
-    <p><a href="#" onClick="newParticipants()"><strong>Add New Class Participant</strong></a> </p>
+    <p><a href="#" onClick="newParticipants()"><strong><i class="fa fa-plus" aria-hidden="true"></i> Add New Class Participant</strong></a> </p>
     <strong>Browse Class Participants</strong>
 
     <!-- table for browsing all class participants -->
