--- a/templates/classes.j2
+++ b/templates/classes.j2
@@ -42,7 +42,7 @@
 
 
 <div id="browse">
-    <p><a href="#" onClick="newClass()"><strong>Add New Class</strong></a></p>
+    <p><a href="#" onClick="newClass()"><strong><i class="fa fa-plus" aria-hidden="true"></i> Add New Class</strong></a></p>
     <strong>Browse Classes</strong>
         <!-- table for browsing all classes -->
        <table cellpadding="4">
