--- a/templates/gyms.j2
+++ b/templates/gyms.j2
@@ -42,7 +42,7 @@
 
 
 <div id="browse">
-    <p><a href="#" onClick="newGym()"><strong>Add New Gym</strong></a> </p>
+    <p><a href="#" onClick="newGym()"><strong><i class="fa fa-plus" aria-hidden="true"></i> Add New Gym</strong></a> </p>
     <strong>Browse Gyms</strong>
     <!-- table for browsing all gyms -->
     <table cellpadding="4">
