--- a/templates/instructors.j2
+++ b/templates/instructors.j2
@@ -41,7 +41,7 @@
 
     
     <div id="browse">
-        <p><a href="#" onClick="newInstructor()"><strong>Add New Instructor</strong></a> </p>
+        <p><a href="#" onClick="newInstructor()"><strong><i class="fa fa-plus" aria-hidden="true"></i> Add New Instructor</strong></a> </p>
         <strong>Browse Instructors</strong>
         <!-- table for browsing all instructors -->
         <table cellpadding="4">
