--- a/templates/members.j2
+++ b/templates/members.j2
@@ -43,7 +43,7 @@
 
 
 <div id="browse">
-    <p><a href="#" onClick="newMember()"><strong>Add New Member</strong></a></p>
+    <p><a href="#" onClick="newMember()"><strong><i class="fa fa-plus" aria-hidden="true"></i> Add New Member</strong></a></p>
     <strong>Browse Members</strong>
     <!-- table for browsing all members -->
     <table cellpadding="4">
