--- a/templates/plans.j2
+++ b/templates/plans.j2
@@ -42,7 +42,7 @@
 
 
 <div id="browse">
-    <p><a href="#" onClick="newPlan()"><strong>Add New Membership Plan</strong></a> </p>
+    <p><a href="#" onClick="newPlan()"><strong><i class="fa fa-plus" aria-hidden="true"></i> Add New Membership Plan</strong></a> </p>
     <strong>Browse Membership Plans</strong>
     <!-- table for browsing all plans -->
     <table cellpadding="4">
