--- a/templates/edit_class.j2
+++ b/templates/edit_class.j2
@@ -49,7 +49,7 @@
                     <input type="text" name="class_type" id="class_type" value="{{data[0].Class_Type}}" required>
                     <p></p>
                 <label>Schedule:</label> 
-                    <input type="text" name="schedule" id="schedule" value="{{data[0].Schedule}}" required>
+                    <input type="datetime-local" name="schedule" id="schedule" value="{{data[0].Schedule}}" required>
                     <p></p>
                 <label>Duration</label> 
                     <input type="number" name="duration" id="duration" min="0" value="{{data[0].Duration}}" required>
